@@ -1,29 +1,62 @@
 [text]
+outputReadable = "Output"
+runtimeReadable = "Runtime"
+propertiesReadable = "Properties"
+methodsReadable = "Methods"
+backtraceAndErrorReadable = "Backtrace and fatal error handling"
+
+analyseProtectedReadable = "Analyse protected properties:"
+analysePrivateReadable = "Analyse private properties:"
+analyseTraversableReadable = "Analyse traversable data:"
+analyseGetterReadable = "Analyse getter methods:"
+debugMethodsReadable = "List of debug methods to poll for data:"
+levelReadable = "Maximum nesting level for objects and arrays:"
+destinationReadable = "Destination:"
+maxCallReadable = "Maximum amount of calls:"
+disabledReadable = "Disable output:"
+maxfilesReadable = "Maximum files in the logfolder:"
+skinReadable = "Skin:"
+registerAutomaticallyReadable = "Register fatal error handler automatically:"
+detectAjaxReadable = "Try to detect AJAX requests:"
+memoryLeftReadable = "Minimum amout of memory [MB]:"
+maxRuntimeReadable = "Maximum Runtime [Seconds]:"
+analyseProtectedMethodsReadable = "Analyse protected methods:"
+analysePrivateMethodsReadable = "Analyse private methods:"
+useScopeAnalysisReadable = "Use scope analysis:"
+analyseConstantsReadable = "Analyse constants:"
+maxStepNumberReadable = "Maximum steps in the backtrace:"
+
+analyseProtectedHelp = "Shall kreXX try to analyse the protected properties of a class?<br/> This may result in a lot of output."
+analysePrivateHelp = "Shall kreXX try to analyse the private properties of a class?<br/> This may result in a lot of output."
+analyseTraversableHelp = "Shall kreXX try to analyse possible traversable data?<br/> Depending on the underlying framework this info might be covered by the debug callback functions."
+analyseGetterHelp = "Shall kreXX try to determine the output of getter methods?<br/> These methods will not be called. kreXX will try to get the (possible) result from the class properties, which may lead to false results."
+debugMethodsHelp = "Comma-separated list of used debug callback functions. A lot of frameworks offer these, toArray and toString being the most common.<br/> kreXX will try to call them, if they are available and display their provided data.<br/> You can not change them on the frontend. If you want other settings here, you have to edit the kreXX configuration file."
+levelHelp = "Some frameworks have objects inside of objects inside of objects, and so on.<br/> Normally kreXX does not run in circles, but going too deep inside of an object tree can result in a lot of output."
+destinationHelp = "kreXX can save it&apos;s output to a file, instead of outputting it to the frontend.<br/> The output will then be stored in the log folder.<br/>You can not change this on the frontend. If you want another destination, you have to edit the kreXX configuration file."
+maxCallHelp = "A lot of output does not only slow down your server, it also slows down your browser. When using kreXX in a loop,<br/> it will create output every time the loop is executed. To limit this, you can configure the maximum call settings."
+disabledHelp = "Here you can disable kreXX. Note that this is just a local setting, it does not affect other browsers."
+maxfilesHelp = "How many logfiles do you want to store inside your logging folder?<br/> When there are more files than this number, the older files will get deleted."
+skinHelp = "Choose a skin here. We have provided kreXX with two skins: smokygrey and hans."
+registerAutomaticallyHelp = "This option registers the fatal errorhandler as soon as kreXX is included. When a fatal error occurs,<br/> kreXX will offer a backtrace and an analysis of the all objects in it. PHP always clears the stack in case of a fatal error,<br/> so kreXX has to keep track of it. <strong>Be warned:</strong> This option will dramatically slow down your requests. Use this only when you have to.<br/> It is by far better to register the errorhandler yourself with <strong>\krexx::registerFatal();</strong> and later unregister it<br/> with <strong>\krexx::unregisterFatal();</strong> tp prevent a slowdown."
+detectAjaxHelp = "kreXX tries to detect whether a request is made via ajax. When it is detected, it will do no output at all. The AJAX detection can be disabled here."
+memoryLeftHelp = "kreXX checks regularly how much memory is left. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is MB."
+maxRuntimeHelp = "kreXX checks during the analysis how much time has elapsed since start. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is seconds."
+analyseProtectedMethodsHelp = "Here you can toggle if kreXX shall analyse the protected methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all."
+analysePrivateMethodsHelp = "Here you can toggle if kreXX shall analyse the private methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all."
+useScopeAnalysisHelp = "Shall kreXX analyse all reachable class properties and methods? If set to 'TRUE', the default configuration for private and protected stuff is overwritten, in case that value is reachable."
+analyseConstantsHelp = "Here you can toggle, if kreXX shall analyse all constants of a class."
+maxStepNumberHelp = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unneccessary to go back more than 10 steps, but if you need to, you can increase this number here."
+
 localFunction = "Here you can enter your own alias function for \krexx::open().<br/> Example: When you enter &apos;gue&apos;, the function will be \krexx::gue($myObject); [or krexx($myObject, &apos;gue&apos;);],<br/> which only devs can use who have set the same value.This is useful, to prevent other devs from calling your debug functions."
-analyseProtected = "Shall kreXX try to analyse the protected properties of a class?<br/> This may result in a lot of output."
-analysePrivate = "Shall kreXX try to analyse the private properties of a class?<br/> This may result in a lot of output."
-analyseTraversable = "Shall kreXX try to analyse possible traversable data?<br/> Depending on the underlying framework this info might be covered by the debug callback functions."
-analyseGetter = "Shall kreXX try to determine the output of getter methods?<br/> These methods will not be called. kreXX will try to get the (possible) result from the class properties, which may lead to false results."
-debugMethods = "Comma-separated list of used debug callback functions. A lot of frameworks offer these, toArray and toString being the most common.<br/> kreXX will try to call them, if they are available and display their provided data.<br/> You can not change them on the frontend. If you want other settings here, you have to edit the kreXX configuration file."
-level = "Some frameworks have objects inside of objects inside of objects, and so on.<br/> Normally kreXX does not run in circles, but going to deep inside of an object tree can result in a lot of output."
 resetbutton = "Here you can reset your local settings, which are stored in a cookie.<br/> kreXX will then use the global settings (either ini-file or factory settings)."
-destination = "kreXX can save it&apos;s output to a file, instead of outputting it to the frontend.<br/> The output will then be stored in the log folder.<br/>You can not change this on the frontend. If you want another destination, you have to edit the kreXX configuration file."
-maxCall = "A lot of output does not only slow down your server, it also slows down your browser. When using kreXX in a loop,<br/> it will create output every time the loop is executed. To limit this, you can configure the maximum call settings."
-disabled = "Here you can disable kreXX. Note that this is just a local setting, it does not affect other browsers."
-maxfiles = "How many logfiles do you want to store inside your logging folder?<br/> When there are more files than this number, the older files will get deleted."
-skin = "Choose a skin here. We have provided kreXX with two skins: smokygrey and hans."
-currentSettings = "kreXX&apos;s configuration can be edited here, changes will be stored in a cookie and overwrite the ini and factory settings.<br/> <strong>Please note, that these are only local settings. They only affect this browser.</strong>"
-registerAutomatically = "This option registers the fatal errorhandler as soon as kreXX is included. When a fatal error occurs,<br/> kreXX will offer a backtrace and an analysis of the all objects in it. PHP always clears the stack in case of a fatal error,<br/> so kreXX has to keep track of it. <strong>Be warned:</strong> This option will dramatically slow down your requests. Use this only when you have to.<br/> It is by far better to register the errorhandler yourself with <strong>\krexx::registerFatal();</strong> and later unregister it<br/> with <strong>\krexx::unregisterFatal();</strong> tp prevent a slowdown."
-detectAjax = "kreXX tries to detect whether a request is made via ajax. When it is detected, it will do no output at all. The AJAX detection can be disabled here."
-memoryLeft = "kreXX checks regularly how much memory is left. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is MB."
-maxRuntime = "kreXX checks during the analysis how much time has elapsed since start. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is seconds."
-analyseProtectedMethods = "Here you can toggle if kreXX shall analyse the protected methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all."
-analysePrivateMethods = "Here you can toggle if kreXX shall analyse the private methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all."
-useScopeAnalysis = "Shall kreXX analyse all reachable class properties and methods? If set to 'TRUE', the default configuration for private and protected stuff is overwritten, in case that value is reachable."
 _getProperties = "TYPO3 debug function.<br />It takes the properties directly from the model, ignoring the getter function.<br />If the getter method is used to compute this value, the values from this function may be inaccurate."
+currentSettings = "kreXX&apos;s configuration can be edited here, changes will be stored in a cookie and overwrite the ini and factory settings.<br/> <strong>Please note, that these are only local settings. They only affect this browser.</strong>"
+
+
+
 php7 = "It looks like you are using PHP7. Fatal errors got removed in PHP7, meaning that they are now catchable like normal errors."
 php7yellow = "The fatal error handler does not work with PHP7!"
-analyseConstants = "Here you can toggle, if kreXX shall analyse all constants of a class."
+
 getterHelpInfo = "Getter methods will NOT get called to get a result. Instead, kreXX tries to get the (possible) result from the properties of this class.<br/> If the getter method is used to compute this value, the values here may be inaccurate."
 maximumLevelReached1 = "Maximum nesting level for the analysis was reached. I will not go any further."
 maximumLevelReached2 =  "To increase this value, change the runtime => level setting."
@@ -60,7 +93,6 @@ configErrorMemory = "Wrong configuration for: 'runtime => memoryLeft'! Expected 
 configErrorMaxRuntime = "Wrong configuration for: 'runtime => maxRuntime'! Expected integer. The configured setting was not applied!"
 configErrorMaxRuntimeBig = "Wrong configuration for: 'runtime => maxRuntime'! Maximum for this server is: %s The configured setting was not applied!"
 configErrorMaxStepNumber = "Wrong configuration for: 'backtraceAndError => maxStepNumber'! Expected integer. The configured setting was not applied!"
-maxStepNumber = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unneccessary to go back more than 10 steps, but if you need to, you can increase this number here."
 emergencyTimer = "Emergency break due to extensive run time!"
 emergencyMemory = "Emergency break due to extensive memory usage!"
 fileserviceDelete = "Unable to delete file: %s"
