@@ -8,6 +8,7 @@
 - Change: Fallback setting runtime => level set to 5.
 - Change: Fallback setting runtime => maxCall set to 10.
 - Change: Refactored the half-assed messaging implementation.
+- Change: The cookie editor is now much better readable.
 - Bugfix: Several tweaks to get a smaller HTML footprint.
 - Bugfix: Prevent the debug methods from creating new analysis
   calls, resulting in an infinite loop.
